fix: add version tag

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </button>
       </div>
       <div class="weather loading">
-        <h2 class="city">Weather in Belgrade</h2>
+        <h2 class="city">Weather in Belgrade v2</h2>
         <h1 id="temp_id" class="temp">21°C</h1>
         <div class="flex">
           <img
